# renoir

./: .gitignore  .set_env.bat  .set_env.sh  .ycm_extra_conf.py  CMakeLists.txt
src/: main.cc
src/editor/: ui.h
src/logging/: log.cc  log.h
src/platform/: thread.cc  thread.h
src/utils/: macros.h  map_macro.h  printable_enum.h  scope_trigger.h  status.h  string.h
